--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,54 @@ services:
             ZOOKEEPER_CLIENT_PORT: 2181
             ZOOKEEPER_TICK_TIME: 2000
 
-    kafka:
+    kafka-1:
         image: confluentinc/cp-kafka:7.4.0
-        container_name: kafka
+        container_name: kafka-1
         ports:
             - "9092:9092"
         environment:
             KAFKA_BROKER_ID: 1
             KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+            KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://host.docker.internal:9092
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
             KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+            KAFKA_DEFAULT_REPLICATION_FACTOR: 1
+            KAFKA_MIN_INSYNC_REPLICAS: 1
+            KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+        depends_on:
+            - zookeeper
+
+    kafka-2:
+        image: confluentinc/cp-kafka:7.4.0
+        container_name: kafka-2
+        ports:
+            - "9093:9093"
+        environment:
+            KAFKA_BROKER_ID: 2
+            KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+            KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9093
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://host.docker.internal:9093
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+            KAFKA_DEFAULT_REPLICATION_FACTOR: 1
+            KAFKA_MIN_INSYNC_REPLICAS: 1
+        depends_on:
+            - zookeeper
+
+    kafka-3:
+        image: confluentinc/cp-kafka:7.4.0
+        container_name: kafka-3
+        ports:
+            - "9094:9094"
+        environment:
+            KAFKA_BROKER_ID: 3
+            KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+            KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9094
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://host.docker.internal:9094
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+            KAFKA_DEFAULT_REPLICATION_FACTOR: 1
+            KAFKA_MIN_INSYNC_REPLICAS: 1
         depends_on:
             - zookeeper
